Fixed some chart item positioning; Updated token stats style

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000">
 
     <script type="text/javascript" src="https://cdn.airswap.io/gallery/airswap-trader.js"></script>
+    <script type="text/javascript" src="tinycolor.js"></script>
 
     <!--
       manifest.json provides metadata used when your web app is added to the
